# healthclaim-guardian-databricks-mlops

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP.md  databricks.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: API.md  ARCHITECTURE.md  RUNBOOK.md
mlruns/0/models/m-9f4df3cf471341648ea8aaeae26a3fe3/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml
resources/: healthclaim_guardian.workflow.yml  healthclaim_guardian_etl.pipeline.yml  sample_job.job.yml
src/: validate_env.py
src/healthclaim_guardian/: __init__.py  config.py  logging_config.py  model_registry.py  secrets.py  validation.py
src/ingest/: generate_bronze.py
src/mlops/: feature_engineering.py  train_model.py
src/process/: gold_aggregation.py  silver_cleansing.py
tests/: conftest.py  sample_taxis_test.py  test_bronze.py  test_config.py  test_model_registry.py  test_validation.py
