[project]
name = "healthclaim_guardian"
version = "0.1.0"
description = "Healthcare claims fraud detection pipeline using ML anomaly detection"
authors = [
    { name = "Healthclaim Guardian Team", email = "healthclaim@synergech.com" }
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    # Databricks
    "databricks-connect>=15.4,<15.5",
    "databricks-dlt",

    # ML & Data Science
    "scikit-learn>=1.3.0",
    "mlflow>=2.10.0",
    "pandas>=2.0.0",

    # Data generation (for synthetic data)
    "faker>=21.0.0",

    # Data quality & validation
    "great-expectations>=0.18.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipykernel>=6.26.0",
    "black>=23.11.0",
    "isort>=5.12.0",
]

[project.scripts]
# Pipeline entry points
ingest-bronze = "src.ingest.generate_bronze:main"
cleanse-silver = "src.process.silver_cleansing:main"
engineer-features = "src.mlops.feature_engineering:main"
train-model = "src.mlops.train_model:main"
detect-anomalies = "src.process.gold_aggregation:main"

# Utility commands
validate-bronze = "healthclaim_guardian.validation:validate_bronze_cli"
validate-silver = "healthclaim_guardian.validation:validate_silver_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/healthclaim_guardian", "src/ingest", "src/process", "src/mlops"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (ok for FastAPI etc)
]

[tool.ruff.lint.isort]
known-first-party = ["healthclaim_guardian"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["healthclaim_guardian"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "databricks.*",
    "pyspark.*",
    "mlflow.*",
    "faker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
